force-app/main/default/objects/Opportunity/fields/Subscription_Handle__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Handle__c</fullName>
    <label>Subscription Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>