force-app/main/default/objects/Opportunity/fields/Subscription_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Name__c</fullName>
    <description>Chargebee Subscription Id</description>
    <externalId>true</externalId>
    <inlineHelpText>Chargebee Subscription Id</inlineHelpText>
    <label>Subscription Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>